implementation movies grid with data from server

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,8 @@
+
 .Header {
-    background-image: linear-gradient(to right bottom, #0184b3, rgb(210, 213, 220));
+    background-image: linear-gradient(to right bottom, hsl(195.8,98.9%,35.3%), hsl(148.6,30.4%,86.5%));
     padding: 10px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    font-family: "Varela Round", serif;
 }
