--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -8,10 +8,18 @@
 .paper {
     padding: 1px 14px;
     display: flex;
+    position: relative;
     justify-content: space-between;
     width: 400px;
     margin: 7px;
     border: 1px solid #ccc;
+}
+
+.progress {
+    position: absolute;
+    padding: 5px;
+    top: 7px;
+    right: 60px;
 }
 
 .buttonBack {
